--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ background:black;
 <tr><td>名称</td><td>池上製作所</td></tr>
 <tr><td>所在地</td><td>西大宮</td></tr>
 <tr><td>代表責任者</td><td>池上和成</td></tr>
-<tr><td>事業内容</td><td>各種製造・加工業務</td></tr>
+<tr><td>事業内容</td><td>各種製造・金属加工業務</td></tr>
 </table>
 </section>
 
 <section class="container contact">
 <h2 class="section-title">お問い合わせ</h2>
-<p>製造・加工に関するご相談はお気軽にお問い合わせください</p>
+<p>製造・金属加工に関するご相談はお気軽にお問い合わせください</p>
 <a href="#">CONTACT</a>
 </section>
 
