--- a/index.html
+++ b/index.html
@@ -5,92 +5,154 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>池上製作所</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;500;700&display=swap" rel="stylesheet">
+
 <style>
 body{
-font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
 margin:0;
-background:#0f1115;
-color:white;
+font-family:'Noto Serif JP', serif;
+background:#0a0c10;
+color:#e5e5e5;
+letter-spacing:0.05em;
 }
 
-header{
-padding:80px 20px;
+/* ===== ヒーロー ===== */
+.hero{
+height:100vh;
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
 text-align:center;
-background:linear-gradient(135deg,#1a1f2b,#0f1115);
+background:
+linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.8)),
+url("https://images.unsplash.com/photo-1581092921461-eab10380a6c7?auto=format&fit=crop&w=1950&q=80");
+background-size:cover;
+background-position:center;
 }
 
-h1{
-font-size:42px;
-letter-spacing:4px;
+.hero h1{
+font-size:56px;
 margin:0;
+font-weight:700;
+letter-spacing:8px;
 }
 
-.container{
-max-width:1000px;
+.hero p{
+margin-top:20px;
+font-size:18px;
+color:#c9a84f;
+}
+
+/* ===== セクション ===== */
+.section{
+max-width:1100px;
 margin:auto;
-padding:80px 20px;
+padding:120px 20px;
 }
 
-.section-title{
-font-size:30px;
-margin-bottom:30px;
-border-left:4px solid gold;
-padding-left:15px;
+.title{
+font-size:34px;
+margin-bottom:60px;
+border-left:3px solid #c9a84f;
+padding-left:20px;
 }
 
-.company-table{
+/* ===== カード ===== */
+.grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+gap:40px;
+}
+
+.card{
+border:1px solid #1f232b;
+padding:40px;
+background:#0f131a;
+transition:.4s;
+}
+
+.card:hover{
+border-color:#c9a84f;
+transform:translateY(-8px);
+}
+
+/* ===== 会社概要 ===== */
+table{
 width:100%;
 border-collapse:collapse;
 }
 
-.company-table td{
-border-bottom:1px solid #333;
-padding:15px 0;
+td{
+padding:20px 0;
+border-bottom:1px solid #1f232b;
 }
 
-.contact{
-text-align:center;
-}
-
-.contact a{
+/* ===== ボタン ===== */
+.btn{
 display:inline-block;
-margin-top:20px;
-padding:14px 40px;
-border:1px solid gold;
-color:gold;
+margin-top:30px;
+padding:14px 50px;
+border:1px solid #c9a84f;
+color:#c9a84f;
 text-decoration:none;
+transition:.3s;
 }
 
+.btn:hover{
+background:#c9a84f;
+color:black;
+}
+
+/* ===== フッター ===== */
 footer{
 text-align:center;
-padding:40px;
-background:black;
+padding:60px;
+background:#05070a;
+color:#777;
 }
 </style>
 </head>
 
 <body>
 
-<header>
+<section class="hero">
 <h1>池上製作所</h1>
-<p>高品質・高精度の製造技術</p>
-</header>
+<p>PRECISION MANUFACTURING TECHNOLOGY</p>
+</section>
 
-<section class="container">
-<h2 class="section-title">会社概要</h2>
+<section class="section">
+<h2 class="title">事業内容</h2>
+<div class="grid">
+<div class="card">
+<h3>精密加工</h3>
+<p>ミクロン単位の精度を追求した最先端加工技術。</p>
+</div>
+<div class="card">
+<h3>製造・組立</h3>
+<p>小ロットから量産まで対応する高度な製造体制。</p>
+</div>
+<div class="card">
+<h3>品質管理</h3>
+<p>全工程トレーサビリティによる徹底品質保証。</p>
+</div>
+</div>
+</section>
 
-<table class="company-table">
+<section class="section">
+<h2 class="title">会社概要</h2>
+<table>
 <tr><td>名称</td><td>池上製作所</td></tr>
 <tr><td>所在地</td><td>西大宮</td></tr>
 <tr><td>代表責任者</td><td>池上和成</td></tr>
-<tr><td>事業内容</td><td>各種製造・金属加工業務</td></tr>
+<tr><td>事業内容</td><td>各種製造・加工業務</td></tr>
 </table>
 </section>
 
-<section class="container contact">
-<h2 class="section-title">お問い合わせ</h2>
-<p>製造・金属加工に関するご相談はお気軽にお問い合わせください</p>
-<a href="#">CONTACT</a>
+<section class="section" style="text-align:center;">
+<h2 class="title">お問い合わせ</h2>
+<p>製造・加工のご相談はお気軽にご連絡ください</p>
+<a class="btn" href="#">CONTACT</a>
 </section>
 
 <footer>
