--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@ color:#777;
 <h2 class="title">会社概要</h2>
 <table>
 <tr><td>名称</td><td>池上製作所</td></tr>
-<tr><td>所在地</td><td>西大宮</td></tr>
+<tr><td>所在地</td><td>西大宮4丁目</td></tr>
 <tr><td>代表責任者</td><td>池上和成</td></tr>
-<tr><td>事業内容</td><td>各種製造・加工業務</td></tr>
+<tr><td>事業内容</td><td>各種製造・金属加工業務</td></tr>
 </table>
 </section>
 
 <section class="section" style="text-align:center;">
 <h2 class="title">お問い合わせ</h2>
-<p>製造・加工のご相談はお気軽にご連絡ください</p>
+<p>製造・金属加工のご相談はお気軽にご連絡ください</p>
 <a class="btn" href="#">CONTACT</a>
 </section>
 
