--- a/index.html
+++ b/index.html
@@ -8,15 +8,58 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
-body{
+
+*{
 margin:0;
+padding:0;
+box-sizing:border-box;
+}
+
+body{
 font-family:'Noto Serif JP', serif;
-background:#0a0c10;
+background:#05070a;
 color:#e5e5e5;
-letter-spacing:0.05em;
+overflow-x:hidden;
+}
+
+/* ===== 動画背景 ===== */
+
+.video-bg{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+object-fit:cover;
+z-index:-2;
+filter:brightness(0.35) contrast(1.2);
+}
+
+.overlay{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:radial-gradient(circle at center, rgba(0,0,0,0.3), rgba(0,0,0,0.95));
+z-index:-1;
+}
+
+/* ===== カーソルグロー ===== */
+
+.cursor{
+position:fixed;
+width:500px;
+height:500px;
+border-radius:50%;
+pointer-events:none;
+background:radial-gradient(circle, rgba(201,168,79,0.18), transparent 60%);
+transform:translate(-50%,-50%);
+z-index:0;
 }
 
 /* ===== ヒーロー ===== */
+
 .hero{
 height:100vh;
 display:flex;
@@ -24,121 +67,186 @@ flex-direction:column;
 justify-content:center;
 align-items:center;
 text-align:center;
-background:
-linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.8)),
-url("https://images.unsplash.com/photo-1581092921461-eab10380a6c7?auto=format&fit=crop&w=1950&q=80");
-background-size:cover;
-background-position:center;
 }
 
 .hero h1{
-font-size:56px;
-margin:0;
-font-weight:700;
-letter-spacing:8px;
+font-size:64px;
+letter-spacing:12px;
+animation:fadeUp 1.5s ease;
 }
 
 .hero p{
-margin-top:20px;
-font-size:18px;
+margin-top:25px;
 color:#c9a84f;
+letter-spacing:4px;
 }
 
 /* ===== セクション ===== */
+
 .section{
 max-width:1100px;
 margin:auto;
-padding:120px 20px;
+padding:140px 20px;
+opacity:0;
+transform:translateY(80px);
+transition:1.2s ease;
+}
+
+.section.show{
+opacity:1;
+transform:translateY(0);
 }
 
 .title{
 font-size:34px;
-margin-bottom:60px;
+margin-bottom:70px;
 border-left:3px solid #c9a84f;
 padding-left:20px;
 }
 
 /* ===== カード ===== */
+
 .grid{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-gap:40px;
+gap:45px;
 }
 
 .card{
+position:relative;
 border:1px solid #1f232b;
-padding:40px;
-background:#0f131a;
-transition:.4s;
+padding:45px;
+background:rgba(15,19,26,0.85);
+backdrop-filter:blur(6px);
+transition:.5s;
+cursor:pointer;
+overflow:hidden;
+}
+
+.card:before{
+content:"";
+position:absolute;
+top:0;
+left:-100%;
+width:100%;
+height:100%;
+background:linear-gradient(120deg, transparent, rgba(201,168,79,0.4), transparent);
+transition:.6s;
+}
+
+.card:hover:before{
+left:100%;
 }
 
 .card:hover{
+transform:translateY(-15px) scale(1.04);
 border-color:#c9a84f;
-transform:translateY(-8px);
+box-shadow:0 25px 60px rgba(0,0,0,0.8);
 }
 
 /* ===== 会社概要 ===== */
+
 table{
 width:100%;
 border-collapse:collapse;
+background:rgba(0,0,0,0.4);
+backdrop-filter:blur(5px);
 }
 
 td{
-padding:20px 0;
+padding:22px;
 border-bottom:1px solid #1f232b;
 }
 
 /* ===== ボタン ===== */
+
 .btn{
 display:inline-block;
-margin-top:30px;
-padding:14px 50px;
+margin-top:35px;
+padding:16px 60px;
 border:1px solid #c9a84f;
 color:#c9a84f;
 text-decoration:none;
-transition:.3s;
+transition:.4s;
+letter-spacing:2px;
 }
 
 .btn:hover{
 background:#c9a84f;
 color:black;
+box-shadow:0 0 30px rgba(201,168,79,0.6);
 }
 
 /* ===== フッター ===== */
+
 footer{
 text-align:center;
-padding:60px;
-background:#05070a;
+padding:80px;
 color:#777;
 }
+
+/* ===== アニメーション ===== */
+
+@keyframes fadeUp{
+from{
+opacity:0;
+transform:translateY(40px);
+}
+to{
+opacity:1;
+transform:translateY(0);
+}
+}
+
 </style>
 </head>
 
 <body>
 
+<!-- 背景動画（金属加工） -->
+<video autoplay muted loop playsinline class="video-bg">
+<source src="https://player.vimeo.com/progressive_redirect/playback/640824180/rendition/720p/file.mp4" type="video/mp4">
+</video>
+
+<div class="overlay"></div>
+<div class="cursor" id="cursor"></div>
+
+<!-- ヒーロー -->
 <section class="hero">
 <h1>池上製作所</h1>
-<p>PRECISION MANUFACTURING TECHNOLOGY</p>
+<p>PRECISION METAL TECHNOLOGY</p>
 </section>
 
+<!-- 事業 -->
 <section class="section">
 <h2 class="title">事業内容</h2>
+
 <div class="grid">
-<div class="card">
+
+<a href="precision.html" class="card">
 <h3>精密加工</h3>
-<p>ミクロン単位の精度を追求した最先端加工技術。</p>
-</div>
-<div class="card">
+<p>ミクロン単位の超高精度加工</p>
+</a>
+
+<a href="assembly.html" class="card">
 <h3>製造・組立</h3>
-<p>小ロットから量産まで対応する高度な製造体制。</p>
-</div>
-<div class="card">
+<p>小ロットから量産まで完全対応</p>
+</a>
+
+<a href="quality.html" class="card">
 <h3>品質管理</h3>
-<p>全工程トレーサビリティによる徹底品質保証。</p>
-</div>
+<p>全工程トレーサビリティ</p>
+</a>
+
+<a href="confidential.html" class="card">
+<h3>機密加工</h3>
+<p>完全非公開・特殊加工</p>
+</a>
+
 </div>
 </section>
 
+<!-- 会社概要 -->
 <section class="section">
 <h2 class="title">会社概要</h2>
 <table>
@@ -149,15 +257,38 @@ color:#777;
 </table>
 </section>
 
+<!-- 問い合わせ -->
 <section class="section" style="text-align:center;">
 <h2 class="title">お問い合わせ</h2>
 <p>製造・金属加工のご相談はお気軽にご連絡ください</p>
-<a class="btn" href="#">CONTACT</a>
+<a class="btn" href="contact.html">CONTACT</a>
 </section>
 
 <footer>
 © Ikegami Seisakusho
 </footer>
+
+<script>
+
+/* カーソル追従 */
+const cursor=document.getElementById("cursor");
+document.addEventListener("mousemove",e=>{
+cursor.style.left=e.clientX+"px";
+cursor.style.top=e.clientY+"px";
+});
+
+/* スクロール表示 */
+const sections=document.querySelectorAll(".section");
+window.addEventListener("scroll",()=>{
+sections.forEach(sec=>{
+const pos=sec.getBoundingClientRect().top;
+if(pos<window.innerHeight-100){
+sec.classList.add("show");
+}
+});
+});
+
+</script>
 
 </body>
 </html>
