--- a/index.html
+++ b/index.html
@@ -8,286 +8,147 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
-
-*{
-margin:0;
-padding:0;
-box-sizing:border-box;
-}
-
-body{
-font-family:'Noto Serif JP', serif;
-background:#05070a;
-color:#e5e5e5;
-overflow-x:hidden;
-}
+*{margin:0;padding:0;box-sizing:border-box;}
+body{font-family:'Noto Serif JP',serif;background:#05070a;color:#e5e5e5;overflow-x:hidden}
 
 /* ===== 動画背景 ===== */
+.video-bg{position:fixed;width:100%;height:100%;object-fit:cover;z-index:-2;filter:brightness(.35)}
+.overlay{position:fixed;width:100%;height:100%;background:radial-gradient(circle,rgba(0,0,0,.2),#000);z-index:-1}
 
-.video-bg{
+/* ===== ロゴアニメ ===== */
+.logo{
+font-size:22px;
+letter-spacing:4px;
 position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
-object-fit:cover;
-z-index:-2;
-filter:brightness(0.35) contrast(1.2);
+left:30px;
+top:25px;
+z-index:999;
+animation:logoGlow 4s infinite alternate;
+}
+@keyframes logoGlow{
+from{color:#888}
+to{color:#c9a84f;text-shadow:0 0 20px #c9a84f}
 }
 
-.overlay{
+/* ===== メニュー ===== */
+.menu-btn{
 position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background:radial-gradient(circle at center, rgba(0,0,0,0.3), rgba(0,0,0,0.95));
-z-index:-1;
+right:30px;
+top:25px;
+z-index:999;
+cursor:pointer;
+font-size:28px;
 }
 
-/* ===== カーソルグロー ===== */
-
-.cursor{
+.menu{
 position:fixed;
-width:500px;
-height:500px;
-border-radius:50%;
-pointer-events:none;
-background:radial-gradient(circle, rgba(201,168,79,0.18), transparent 60%);
-transform:translate(-50%,-50%);
-z-index:0;
+top:0;
+right:-100%;
+width:320px;
+height:100%;
+background:#0a0c10;
+padding:120px 40px;
+transition:.5s;
+}
+.menu.open{right:0}
+.menu a{
+display:block;
+margin-bottom:30px;
+color:white;
+text-decoration:none;
+font-size:20px;
 }
 
 /* ===== ヒーロー ===== */
-
-.hero{
-height:100vh;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-text-align:center;
-}
-
-.hero h1{
-font-size:64px;
-letter-spacing:12px;
-animation:fadeUp 1.5s ease;
-}
-
-.hero p{
-margin-top:25px;
-color:#c9a84f;
-letter-spacing:4px;
-}
+.hero{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center}
+.hero h1{font-size:64px;letter-spacing:10px}
 
 /* ===== セクション ===== */
-
-.section{
-max-width:1100px;
-margin:auto;
-padding:140px 20px;
-opacity:0;
-transform:translateY(80px);
-transition:1.2s ease;
-}
-
-.section.show{
-opacity:1;
-transform:translateY(0);
-}
-
-.title{
-font-size:34px;
-margin-bottom:70px;
-border-left:3px solid #c9a84f;
-padding-left:20px;
-}
+.section{max-width:1100px;margin:auto;padding:140px 20px}
+.title{font-size:32px;margin-bottom:60px;border-left:3px solid #c9a84f;padding-left:20px}
 
 /* ===== カード ===== */
-
-.grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-gap:45px;
-}
-
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:40px}
 .card{
 position:relative;
 border:1px solid #1f232b;
 padding:45px;
-background:rgba(15,19,26,0.85);
-backdrop-filter:blur(6px);
-transition:.5s;
+background:rgba(0,0,0,.5);
 cursor:pointer;
 overflow:hidden;
+transition:.5s;
 }
+.card:hover{transform:translateY(-12px);border-color:#c9a84f}
 
+/* 金属光沢 */
 .card:before{
 content:"";
 position:absolute;
-top:0;
-left:-100%;
-width:100%;
-height:100%;
-background:linear-gradient(120deg, transparent, rgba(201,168,79,0.4), transparent);
-transition:.6s;
+top:0;left:-100%;
+width:100%;height:100%;
+background:linear-gradient(120deg,transparent,rgba(255,255,255,.3),transparent);
+transition:.7s;
 }
-
-.card:hover:before{
-left:100%;
-}
-
-.card:hover{
-transform:translateY(-15px) scale(1.04);
-border-color:#c9a84f;
-box-shadow:0 25px 60px rgba(0,0,0,0.8);
-}
-
-/* ===== 会社概要 ===== */
-
-table{
-width:100%;
-border-collapse:collapse;
-background:rgba(0,0,0,0.4);
-backdrop-filter:blur(5px);
-}
-
-td{
-padding:22px;
-border-bottom:1px solid #1f232b;
-}
+.card:hover:before{left:100%}
 
 /* ===== ボタン ===== */
-
 .btn{
 display:inline-block;
-margin-top:35px;
-padding:16px 60px;
+margin-top:30px;
+padding:14px 50px;
 border:1px solid #c9a84f;
 color:#c9a84f;
 text-decoration:none;
-transition:.4s;
-letter-spacing:2px;
 }
-
-.btn:hover{
-background:#c9a84f;
-color:black;
-box-shadow:0 0 30px rgba(201,168,79,0.6);
-}
-
-/* ===== フッター ===== */
-
-footer{
-text-align:center;
-padding:80px;
-color:#777;
-}
-
-/* ===== アニメーション ===== */
-
-@keyframes fadeUp{
-from{
-opacity:0;
-transform:translateY(40px);
-}
-to{
-opacity:1;
-transform:translateY(0);
-}
-}
-
+.btn:hover{background:#c9a84f;color:black}
 </style>
 </head>
 
 <body>
 
-<!-- 背景動画（金属加工） -->
 <video autoplay muted loop playsinline class="video-bg">
 <source src="https://player.vimeo.com/progressive_redirect/playback/640824180/rendition/720p/file.mp4" type="video/mp4">
 </video>
-
 <div class="overlay"></div>
-<div class="cursor" id="cursor"></div>
 
-<!-- ヒーロー -->
+<div class="logo">IKG</div>
+<div class="menu-btn" onclick="toggleMenu()">☰</div>
+
+<div class="menu" id="menu">
+<a href="index.html">TOP</a>
+<a href="precision.html">精密加工</a>
+<a href="assembly.html">製造組立</a>
+<a href="quality.html">品質管理</a>
+<a href="confidential.html">機密加工</a>
+<a href="contact.html">お問い合わせ</a>
+</div>
+
 <section class="hero">
 <h1>池上製作所</h1>
 <p>PRECISION METAL TECHNOLOGY</p>
 </section>
 
-<!-- 事業 -->
 <section class="section">
 <h2 class="title">事業内容</h2>
-
 <div class="grid">
 
-<a href="precision.html" class="card">
-<h3>精密加工</h3>
-<p>ミクロン単位の超高精度加工</p>
-</a>
-
-<a href="assembly.html" class="card">
-<h3>製造・組立</h3>
-<p>小ロットから量産まで完全対応</p>
-</a>
-
-<a href="quality.html" class="card">
-<h3>品質管理</h3>
-<p>全工程トレーサビリティ</p>
-</a>
-
-<a href="confidential.html" class="card">
-<h3>機密加工</h3>
-<p>完全非公開・特殊加工</p>
-</a>
+<a href="precision.html" class="card"><h3>精密加工</h3></a>
+<a href="assembly.html" class="card"><h3>製造組立</h3></a>
+<a href="quality.html" class="card"><h3>品質管理</h3></a>
+<a href="confidential.html" class="card"><h3>機密加工</h3></a>
 
 </div>
 </section>
 
-<!-- 会社概要 -->
-<section class="section">
-<h2 class="title">会社概要</h2>
-<table>
-<tr><td>名称</td><td>池上製作所</td></tr>
-<tr><td>所在地</td><td>西大宮4丁目</td></tr>
-<tr><td>代表責任者</td><td>池上和成</td></tr>
-<tr><td>事業内容</td><td>各種製造・金属加工業務</td></tr>
-</table>
-</section>
-
-<!-- 問い合わせ -->
-<section class="section" style="text-align:center;">
+<section class="section" style="text-align:center">
 <h2 class="title">お問い合わせ</h2>
-<p>製造・金属加工のご相談はお気軽にご連絡ください</p>
 <a class="btn" href="contact.html">CONTACT</a>
 </section>
 
-<footer>
-© Ikegami Seisakusho
-</footer>
-
 <script>
-
-/* カーソル追従 */
-const cursor=document.getElementById("cursor");
-document.addEventListener("mousemove",e=>{
-cursor.style.left=e.clientX+"px";
-cursor.style.top=e.clientY+"px";
-});
-
-/* スクロール表示 */
-const sections=document.querySelectorAll(".section");
-window.addEventListener("scroll",()=>{
-sections.forEach(sec=>{
-const pos=sec.getBoundingClientRect().top;
-if(pos<window.innerHeight-100){
-sec.classList.add("show");
+function toggleMenu(){
+document.getElementById("menu").classList.toggle("open")
 }
-});
-});
-
 </script>
 
 </body>
