--- a/index.html
+++ b/index.html
@@ -3,152 +3,291 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>池上製作所</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;500;700&display=swap" rel="stylesheet">
+<title>池上製作所 | Precision Metal Works</title>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;}
-body{font-family:'Noto Serif JP',serif;background:#05070a;color:#e5e5e5;overflow-x:hidden}
 
-/* ===== 動画背景 ===== */
-.video-bg{position:fixed;width:100%;height:100%;object-fit:cover;z-index:-2;filter:brightness(.35)}
-.overlay{position:fixed;width:100%;height:100%;background:radial-gradient(circle,rgba(0,0,0,.2),#000);z-index:-1}
-
-/* ===== ロゴアニメ ===== */
-.logo{
-font-size:22px;
-letter-spacing:4px;
-position:fixed;
-left:30px;
-top:25px;
-z-index:999;
-animation:logoGlow 4s infinite alternate;
-}
-@keyframes logoGlow{
-from{color:#888}
-to{color:#c9a84f;text-shadow:0 0 20px #c9a84f}
+/* =========================
+   ベース
+========================= */
+body{
+ margin:0;
+ font-family: "Helvetica Neue", sans-serif;
+ background:#000;
+ color:white;
+ overflow-x:hidden;
 }
 
-/* ===== メニュー ===== */
-.menu-btn{
-position:fixed;
-right:30px;
-top:25px;
-z-index:999;
-cursor:pointer;
-font-size:28px;
+section{
+ padding:120px 10%;
 }
 
-.menu{
-position:fixed;
-top:0;
-right:-100%;
-width:320px;
-height:100%;
-background:#0a0c10;
-padding:120px 40px;
-transition:.5s;
-}
-.menu.open{right:0}
-.menu a{
-display:block;
-margin-bottom:30px;
-color:white;
-text-decoration:none;
-font-size:20px;
+/* =========================
+   動画背景
+========================= */
+.hero{
+ position:relative;
+ height:100vh;
+ overflow:hidden;
 }
 
-/* ===== ヒーロー ===== */
-.hero{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center}
-.hero h1{font-size:64px;letter-spacing:10px}
+.hero video{
+ position:absolute;
+ width:100%;
+ height:100%;
+ object-fit:cover;
+ filter:brightness(0.45);
+}
 
-/* ===== セクション ===== */
-.section{max-width:1100px;margin:auto;padding:140px 20px}
-.title{font-size:32px;margin-bottom:60px;border-left:3px solid #c9a84f;padding-left:20px}
+.hero-text{
+ position:absolute;
+ top:50%;
+ left:50%;
+ transform:translate(-50%,-50%);
+ text-align:center;
+}
 
-/* ===== カード ===== */
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:40px}
+.hero h1{
+ font-size:64px;
+ letter-spacing:8px;
+ animation:glow 3s infinite alternate;
+}
+
+@keyframes glow{
+ from{ text-shadow:0 0 10px #aaa;}
+ to{ text-shadow:0 0 40px #fff;}
+}
+
+/* =========================
+   ナビ
+========================= */
+nav{
+ position:fixed;
+ width:100%;
+ top:0;
+ background:rgba(0,0,0,0.6);
+ backdrop-filter:blur(10px);
+ z-index:999;
+}
+
+nav ul{
+ display:flex;
+ justify-content:center;
+ list-style:none;
+ padding:20px;
+ margin:0;
+ gap:40px;
+}
+
+nav a{
+ color:white;
+ text-decoration:none;
+ letter-spacing:2px;
+}
+
+/* =========================
+   見出し
+========================= */
+h2{
+ font-size:42px;
+ letter-spacing:4px;
+ margin-bottom:40px;
+}
+
+/* =========================
+   ギャラリー
+========================= */
+.grid{
+ display:grid;
+ grid-template-columns:repeat(3,1fr);
+ gap:20px;
+}
+
+.grid img{
+ width:100%;
+ height:260px;
+ object-fit:cover;
+ filter:grayscale(100%);
+ transition:0.4s;
+}
+
+.grid img:hover{
+ filter:none;
+ transform:scale(1.05);
+}
+
+/* =========================
+   メタル背景
+========================= */
+.metal{
+ background:linear-gradient(135deg,#111,#222,#111);
+}
+
+/* =========================
+   工程カード
+========================= */
+.cards{
+ display:flex;
+ gap:30px;
+}
+
 .card{
-position:relative;
-border:1px solid #1f232b;
-padding:45px;
-background:rgba(0,0,0,.5);
-cursor:pointer;
-overflow:hidden;
-transition:.5s;
+ flex:1;
+ background:#111;
+ padding:40px;
+ border:1px solid #444;
+ transition:0.4s;
 }
-.card:hover{transform:translateY(-12px);border-color:#c9a84f}
 
-/* 金属光沢 */
-.card:before{
-content:"";
-position:absolute;
-top:0;left:-100%;
-width:100%;height:100%;
-background:linear-gradient(120deg,transparent,rgba(255,255,255,.3),transparent);
-transition:.7s;
+.card:hover{
+ box-shadow:0 0 40px silver;
 }
-.card:hover:before{left:100%}
 
-/* ===== ボタン ===== */
-.btn{
-display:inline-block;
-margin-top:30px;
-padding:14px 50px;
-border:1px solid #c9a84f;
-color:#c9a84f;
-text-decoration:none;
+/* =========================
+   会社情報
+========================= */
+.company{
+ line-height:2.2;
+ font-size:18px;
 }
-.btn:hover{background:#c9a84f;color:black}
+
+/* =========================
+   フォーム
+========================= */
+input,textarea{
+ width:100%;
+ padding:15px;
+ margin:10px 0;
+ background:#111;
+ border:1px solid #555;
+ color:white;
+}
+
+button{
+ padding:15px 40px;
+ background:silver;
+ border:none;
+ cursor:pointer;
+}
+
+/* =========================
+   スクロール発光
+========================= */
+.fade{
+ opacity:0;
+ transform:translateY(80px);
+ transition:1.2s;
+}
+
+.show{
+ opacity:1;
+ transform:none;
+}
+
 </style>
 </head>
 
 <body>
 
-<video autoplay muted loop playsinline class="video-bg">
-<source src="https://player.vimeo.com/progressive_redirect/playback/640824180/rendition/720p/file.mp4" type="video/mp4">
-</video>
-<div class="overlay"></div>
+<!-- ナビ -->
+<nav>
+<ul>
+<li><a href="#">TOP</a></li>
+<li><a href="#machinery">設備</a></li>
+<li><a href="#process">加工技術</a></li>
+<li><a href="#company">会社情報</a></li>
+<li><a href="#contact">お問い合わせ</a></li>
+</ul>
+</nav>
 
-<div class="logo">IKG</div>
-<div class="menu-btn" onclick="toggleMenu()">☰</div>
-
-<div class="menu" id="menu">
-<a href="index.html">TOP</a>
-<a href="precision.html">精密加工</a>
-<a href="assembly.html">製造組立</a>
-<a href="quality.html">品質管理</a>
-<a href="confidential.html">機密加工</a>
-<a href="contact.html">お問い合わせ</a>
-</div>
-
+<!-- ヒーロー動画 -->
 <section class="hero">
-<h1>池上製作所</h1>
-<p>PRECISION METAL TECHNOLOGY</p>
+<video autoplay muted loop>
+<source src="factory.mp4" type="video/mp4">
+</video>
+
+<div class="hero-text">
+<h1>IKegami Precision</h1>
+<p>超精密金属加工</p>
+</div>
 </section>
 
-<section class="section">
-<h2 class="title">事業内容</h2>
-<div class="grid">
+<!-- 設備 -->
+<section id="machinery" class="metal fade">
+<h2>主要設備</h2>
 
-<a href="precision.html" class="card"><h3>精密加工</h3></a>
-<a href="assembly.html" class="card"><h3>製造組立</h3></a>
-<a href="quality.html" class="card"><h3>品質管理</h3></a>
-<a href="confidential.html" class="card"><h3>機密加工</h3></a>
+<div class="grid">
+<img src="machine1.jpg">
+<img src="machine2.jpg">
+<img src="machine3.jpg">
+<img src="machine4.jpg">
+<img src="machine5.jpg">
+<img src="machine6.jpg">
+</div>
+</section>
+
+<!-- 加工技術 -->
+<section id="process" class="fade">
+<h2>加工プロセス</h2>
+
+<div class="cards">
+
+<div class="card">
+<h3>CNC精密加工</h3>
+<p>ミクロン単位の高精度加工</p>
+</div>
+
+<div class="card">
+<h3>レーザー加工</h3>
+<p>高出力レーザー切断</p>
+</div>
+
+<div class="card">
+<h3>鏡面仕上げ</h3>
+<p>超高級光沢研磨</p>
+</div>
 
 </div>
 </section>
 
-<section class="section" style="text-align:center">
-<h2 class="title">お問い合わせ</h2>
-<a class="btn" href="contact.html">CONTACT</a>
+<!-- 会社情報 -->
+<section id="company" class="metal fade">
+<h2>会社概要</h2>
+
+<div class="company">
+会社名：池上製作所<br>
+所在地：西大宮<br>
+代表責任者：池上和成<br>
+事業内容：精密金属加工・部品製造<br>
+</div>
+</section>
+
+<!-- お問い合わせ -->
+<section id="contact" class="fade">
+<h2>お問い合わせ</h2>
+
+<form>
+<input type="text" placeholder="お名前">
+<input type="email" placeholder="メール">
+<textarea rows="5" placeholder="お問い合わせ内容"></textarea>
+<button>送信</button>
+</form>
 </section>
 
 <script>
-function toggleMenu(){
-document.getElementById("menu").classList.toggle("open")
-}
+
+/* スクロール出現 */
+const faders=document.querySelectorAll('.fade');
+
+window.addEventListener('scroll',()=>{
+ faders.forEach(el=>{
+  const rect=el.getBoundingClientRect().top;
+  if(rect < window.innerHeight-100){
+   el.classList.add('show');
+  }
+ })
+});
+
 </script>
 
 </body>
